Add deleting moderators by filter in Forum Service
