# src/Services/Forum/Forum.API/Models/Api/ApiModeratorFilterDtoIn.cs
@@ -2,10 +2,10 @@
 {
     public class ApiModeratorFilterDtoIn : ApiPagedFilter
     {
-        public int? EntityId { get; set; }
+        public int? EntityId { get; init; }
 
-        public int? EntityType { get; set; }
+        public int? EntityType { get; init; }
 
-        public int? ForumId { get; set; }
+        public int? ForumId { get; init; }
     }
 }
